--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-server-supos",
-  "version": "0.1.2",
+  "version": "0.6.0",
   "type": "module",
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js"
@@ -19,9 +19,11 @@
   "license": "ISC",
   "description": "supos mcp server",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.6.0",
+    "@modelcontextprotocol/sdk": "^1.7.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2"
+    "mqtt": "^5.10.4",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
