--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/node-fetch": "^2.6.12",
+    "prettier": "^3.5.3",
     "shx": "^0.3.4",
     "typescript": "^5.8.2"
   }
